fixed text alignment in how

--- a/css/how.css
+++ b/css/how.css
@@ -33,6 +33,7 @@
 .h-i-w-text {
     width: 100%;
     font-size: small;
+    text-align: center;
 }
 
 #text-body-upper {
